Added Sin and Cosine

--- a/docs/operators.tex
+++ b/docs/operators.tex
@@ -8,7 +8,7 @@
     \maketitle
     \section*{Contributors}
         \begin{itemize}
-            \item Rylan Yancey
+            \item Rylan W. Yancey
         \end{itemize}
     \section*{Acknowledgements}
         \begin{itemize}
@@ -35,6 +35,11 @@
         $$\frac{\delta}{\delta{v}}(u + v) = \frac{\delta{u}}{\delta{v}} + \frac{\delta{v}}{\delta{v}} = 1$$
 
         Therefore, we can say that the gradient w.r.t u is 1, and the gradient w.r.t v is 1.
+
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+    \section{Cos}
+        The Cosine Operator is defined as $f(x) = cos(x)$. It is well known that the gradient of the $cos(x)$ function
+        is $sin(x)$, so that is the gradient we will use here.
 
 \noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
     \section{Div}
@@ -124,6 +129,11 @@
         \end{align}
     Therefore, we say that the gradient of the sigmoid function with respect to x is $\sigma(x) \cdot (1-\sigma(x))$.
 
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+    \section{Sin}
+        The Sine Operator is defined as $f(x) = sin(x)$. It is well known that the gradient of the $sin(x)$ function
+        is $cos(x)$, so that is the gradient we will use here.
+        
 \noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
     \section{Softmax}
         The Softmax Function is defined as follows:
